# axum-vue-template

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: backend-ci.yml
backend/: .env.example  Cargo.toml
backend/src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  routes.rs
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.vue
