# File: backend/Cargo.toml
[package]
name = "axum-template"
version = "0.1.0"
edition = "2021" # Using the current stable edition of Rust

[dependencies]
# Core web framework and async runtime
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }

# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP middleware
tower-http = { version = "0.6.6", features = ["cors"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Configuration
dotenvy = "0.15"
envy = "0.4" # Useful for deserializing env vars into structs

# Database (PostgreSQL with SQLx)
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }
